--- a/index.html
+++ b/index.html
@@ -10,6 +10,12 @@
 <body>
     <main>
         <h1>Rock Paper Scissors</h1>
+        <div class="scoreboard">
+            <h2>Scoreboard</h2>
+            <p id="human-score">Your Score: 0</p>
+            <p id="computer-score">Computer Score: 0</p>
+            <p id="round-count">Round: 0</p>
+        </div>
         <div class="game-container">
             <div class="user-choice">
                 <h2>Your Choice</h2>
@@ -22,13 +28,7 @@
                 <p id="result"></p>
             </div>
         </div>
-        <button id="reset" class="reset-button">Play Again</button>
-        <div class="scoreboard">
-            <h2>Scoreboard</h2>
-            <p id="human-score">Your Score: 0</p>
-            <p id="computer-score">Computer Score: 0</p>
-            <p id="round-count">Round: 0 / 5</p>
-        </div> 
+        <button id="reset" class="reset-button">Play Again</button> 
     </main>
 </body>
 </html>
